--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^7.6.1",
+    "moment": "^2.24.0",
     "rbx": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebaseui": "^4.0.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-week-calendar": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
